# Forensic-Self-Descriptions-CVPR25

./: .gitignore  CITATION.cff  LICENSE  README.md  demo.py  pyproject.toml
fsd/: __init__.py  attribution.py  cli.py  cli_ray.py  detector.py  fre.py  fsd_computation.py  gmm.py  projection.py  serve.py  weights.py
weights/: config.json  fre.pt
